--- a/node-tutorial/package.json
+++ b/node-tutorial/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "ass": "nodemon ../Javascript-Nuggets/cbt-hell/app.js",
+    "callback": "nodemon ../Javascript-Nuggets/callback-functions/callback.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.0.2",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
